<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Gatrium</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="reminders">Reminders</string>
    <string name="tasks">Tasks</string>
    <string name="getting_started_a">Welcome to</string>
    <string name="gatrium">Gatrium</string>
    <string name="getting_started_b">We need some\ninformation\nto get started</string>
    <string name="ok_ldi">Ok, Let\'s do it.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_gettings_started_b">gettings_started_b</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="how_many_do_you_have">How many pets do you have?</string>
    <string name="continue_string">Continue</string>
    <string name="just_one">Just one</string>
    <string name="more_than_one">More than one</string>
    <string name="choose_number_pets">How many are they?:</string>
    <string-array name="num_possible_pets">
        <item>2</item>
        <item>3</item>
        <item>More than that</item>
    </string-array>
    <string name="so_tell_us">Tell us about your pet</string>
    <string name="is_cat">It\'s a Cat</string>
    <string name="is_dog">It\'s a Dog</string>
    <string name="what_is_your_pet_name">Type your pet\'s name</string>
    <string name="type_your_name">Type your name</string>
    <string name="ready">Ready</string>
    <string name="title_activity_reminders">reminders</string>
    <string name="your_reminders">Your Reminders</string>
    <string name="set_a_new_reminder">Set a new reminder</string>
    <string name="new_reminder_string">So tell us, what kind of reminder?</string>
    <string name="food">Food</string>
    <string name="refill_water">Refill Water</string>
    <string name="change_cat_litter">Change Cat\n\t\tLitter</string>
    <string name="shower">Shower</string>
    <string name="walk">Walk</string>
    <string name="medicines">Medicines</string>
    <string name="how_frequently_change_cat_litter">How frequently do you want to change cat litter?</string>
    <string name="how_frequently_shower_cat">How frequently do you shower your cat?</string>
    <string name="how_frequently_shower_dog">How frequently do you shower your dog?</string>
    <string name="how_many_times_do_you_fed_your_cat">How many times do you fed your cat?</string>
    <string name="how_many_times_do_you_fed_your_dog">How many times do you fed your dog?</string>
    <string name="each_four_weeks">Each four weeks</string>
    <string name="each_six_weeks">Each six weeks</string>
    <string name="each_two_months">Each two months</string>
    <string name="weekly">Weekly</string>
    <string name="every_two_weeks">Every Two Weeks</string>
    <string name="other_days">Other (Days)</string>
    <string name="type_frequency_days">Frequency in days</string>
    <string name="set_reminder_hour">Set an hour for your reminder</string>
    <string name="reminder_text_change_litter">This is a reminder for changing cat litter</string>
    <string name="reminder_text_cat_shower">This is a reminder for showering your cat</string>
    <string name="reminder_text_cat_refill_water">This is a reminder for refilling your cat water</string>
    <string name="reminder_text_cat_food">This is a reminder for your cat food</string>
    <string name="reminder_text_cat_walk">Go out and walk with your cat</string>
    <string name="reminder_text_dog_shower">This is a reminder for showering your dog</string>
    <string name="reminder_text_dog_refill_water">This is a reminder for your dog water</string>
    <string name="reminder_text_dog_walk">Go out and walk with your dog</string>
    <string name="reminder_text_dog_food">This is a reminder for your dog food</string>
    <string name="please_enter_a_valid_number_days">Please enter a valid number(days)</string>
    <string name="ok_reminder_text">Ok, I\'ll do it</string>
    <string name="first_food">First Food</string>
    <string name="second_food">Second Food</string>
    <string name="third_food">Third Food</string>
    <string name="set_cat_foods_time">Set the times of your\n\t\t\t\t\t\tcat\'s foods</string>
    <string name="set_dog_foods_time">Set the times of your\n\t\t\t\t\t\tdog\'s foods</string>
    <string name="once_a_day">Once a day</string>
    <string name="twice_a_day">Twice a day</string>
    <string name="thrice_a_day">Thrice a day</string>
    <string name="error_did_not_get_num_foods_current_activity">We\'re sorry, we didn\'t receive the number of foods properly, try again or contact developers</string>
    <string name="error_did_not_get_walk_frequency">We\'re sorry, we didn\'t receive the frequency of walks properly, try again or contact developers</string>
    <string name="how_frequently_do_you_walk_with_your_cat">How frequently do you walk with your cat</string>
    <string name="how_frequently_do_you_walk_with_your_dog">How frequently do you walk with your dog</string>
    <string name="daily">Daily</string>
    <string name="each_three_days">Each three days</string>
    <string name="each_fourteen_days">Each 14 days</string>
    <string name="other">Other</string>
    <string name="monthly">Monthly</string>
    <string name="days">Days</string>
    <string name="new_reminder_medicine_question">Set the details for your Pet\'s Medicine Reminder</string>
    <string name="how_often_does_your_pet_need_the_medicine">Dose Frequency</string>
    <string name="set_name_medicine_reminder">Medicine\'s name</string>
    <string name="reminder_for_medicine">This is a reminder for medicine</string>
    <string name="reminder_refill_water_cat">Refill your cat water</string>
    <string name="reminder_refill_water_dog">Refill your dog water</string>
    <string name="reminder_shower_cat">Shower your cat</string>
    <string name="reminder_shower_dog">Shower your dog</string>
    <string name="reminder_food_cat">Fed your cat</string>
    <string name="reminder_food_dog">Fed your dog</string>
    <string name="reminder_cat_litter">Change the cat litter</string>
    <string name="reminder_cat_walk">Walk with your cat</string>
    <string name="reminder_dog_walk">Walk with your dog</string>
    <string name="gatrium_notification">Gatrium Notification</string>
    <string name="tap_notification_reminder">Tap to mark as done</string>
    <string name="your_reminder_has_been_set">Your reminder has been set</string>
    <string name="your_reminders_name">Your reminder\'s name</string>
    <string name="not_able_to_set_reminder">We\'re sorry, we couldn\'t set the reminder properly, try again</string>
    <string name="do_you_want_to_use_pedometer">Do you want to use pedometer?</string>
    <string name="yes_sure">Yes, sure</string>
    <string name="no_thanks">No, thanks</string>
    <string name="set_steps_number_for_walk">Set a goal for your pet\'s walk</string>
    <string name="five_thousand_steps">5000 steps</string>
    <string name="ten_thousand_steps">10000 steps</string>
    <string name="walk_progress">Walk Progress</string>
    <string name="walk_goal_accomplished">Walk goal accomplished, Congratulations!</string>
    <string name="long_way_to_go_keep_going">There\'s a long way to go, keep going…</string>
    <string name="halfway_there">Halfway there…</string>
    <string name="almost_there">Almost there…</string>
    <string name="pet_name">Pet\'s name</string>
    <string name="title_dialog_remove_widget">Removing Widget</string>
    <string name="message_dialog_remove_calendar_widget">Are you sure you want to remove Calendar?</string>
    <string name="message_dialog_remove_pedometer_widget">Are you sure you want to remove Pedometer?</string>
    <string name="message_dialog_remove_daily_overview_widget">Are you sure you want to remove Daily Overview?</string>
    <string name="calendar_remove_widget_snackbar_message">Calendar has been removed from your widgets</string>
    <string name="pedometer_remove_widget_snackbar_message">Pedometer has been removed from your widgets</string>
    <string name="daily_overview_remove_widget_snackbar_message">Daily Overview has been hided</string>
    <string name="daily_overview_added_successfully">Daily Overview added successfully</string>
    <string name="calendar_added_successfully">Calendar widget added successfully</string>
    <string name="pedometer_added_successfully">Pedometer widget added successfully</string>
    <string name="yes_remove_widget">Yes, remove this</string>
    <string name="no_remove_widget">Keep it</string>
    <string name="calendar">Calendar</string>
    <string name="pedometer">Pedometer</string>
    <string name="daily_overview">Daily Overview</string>
    <string name="remove">Remove</string>
    <string name="hide">Hide</string>
    <string name="sample_date_day_overview">January 28, 2024</string>
    <string name="make_annotation_hint">Make an annotation for the day...</string>
    <string name="error_retrieving_day">Unknown exception caused by Calendar\'s Day information</string>
    <string name="pedometer_settings">Pedometer Settings</string>
    <string name="change_goal_setting">Change Number of Steps Goal</string>
    <string name="change_steps_label">Select Number of Steps...</string>
</resources>