<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".getting_started"
    android:background="@color/main_sky_blue">
    <RelativeLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/welcome_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:text="@string/getting_started_a"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:fontFamily="@font/montserratbold"
            android:text="@string/gatrium"
            android:id="@+id/gatrium_logo"
            android:textSize="50sp"
            android:layout_below="@+id/welcome_to"
            android:textColor="@color/main_orange"/>

        <TextView
            android:id="@+id/getting_started_string_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gatrium_logo"
            android:fontFamily="@font/montserratbold"
            android:text="@string/getting_started_b"
            android:textColor="@color/white"
            android:textSize="50sp" />
        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/main_orange"
            app:cardCornerRadius="50dp"
            app:cardElevation="5dp"
            android:id="@+id/ldi_card_button"
            android:layout_below="@+id/getting_started_string_b"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserratblack"
                android:textSize="30sp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="15dp"
                android:layout_marginStart="15dp"
                android:textColor="@color/main_sky_blue"
                android:text="@string/ok_ldi"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</RelativeLayout>