<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".new_reminder_walk"
    android:background="@color/main_sky_blue">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp">

        <TextView
            android:id="@+id/title_new_reminder_walk_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserratextrabold"
            android:text="@string/how_frequently_do_you_walk_with_your_dog"
            android:textColor="@color/main_orange"
            android:textSize="50sp" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_reminder_walk_daily_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_new_reminder_walk_question"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/main_orange"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserratextrabold"
                    android:text="@string/daily"
                    android:textColor="@color/main_sky_blue"
                    android:textSize="24sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_reminder_walk_each_three_days_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title_new_reminder_walk_question"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/main_orange"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserratextrabold"
                    android:text="@string/each_three_days"
                    android:textColor="@color/main_sky_blue"
                    android:textSize="24sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_reminder_walk_weekly_days_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_reminder_walk_each_three_days_card"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/main_orange"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserratextrabold"
                    android:text="@string/weekly"
                    android:textColor="@color/main_sky_blue"
                    android:textSize="24sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_reminder_walk_each_fourteen_days_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_reminder_walk_each_three_days_card"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/main_orange"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserratextrabold"
                    android:text="@string/each_fourteen_days"
                    android:textColor="@color/main_sky_blue"
                    android:textSize="24sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_reminder_walk_other_days_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_reminder_walk_weekly_days_card"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/main_orange"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/new_reminder_walk_other_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserratextrabold"
                    android:text="@string/other"
                    android:textColor="@color/main_sky_blue"
                    android:textSize="24sp" />

                <RelativeLayout
                    android:id="@+id/new_reminder_walk_other_rel_lay"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/new_reminder_walk_other_text"
                    android:layout_marginBottom="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:fontFamily="@font/montserratbold"
                        android:hint="@string/days"
                        android:textColor="@color/main_sky_blue"
                        android:id="@+id/new_reminder_walk_other_input"/>
                </RelativeLayout>
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/new_reminder_walk_monthly_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_reminder_walk_weekly_days_card"
            android:layout_marginTop="50dp"
            app:cardBackgroundColor="@color/main_orange"
            app:cardCornerRadius="50dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="15dp"
                    android:layout_marginBottom="5dp"
                    android:fontFamily="@font/montserratextrabold"
                    android:text="@string/monthly"
                    android:textColor="@color/main_sky_blue"
                    android:textSize="24sp" />
            </RelativeLayout>
        </com.google.android.material.card.MaterialCardView>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:src="@drawable/ic_baseline_arrow_forward_24"
            android:id="@+id/new_reminder_walk_arrow_forward"/>
    </RelativeLayout>
</RelativeLayout>